--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.12.3
 Click==7.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
+Flask-JWT==0.3.2
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 flask-restplus==0.12.1
@@ -17,8 +18,10 @@ jsonify==0.5
 jsonschema==3.0.2
 Mako==1.1.0
 MarkupSafe==1.1.1
+mysqlclient==1.4.4
 pkg-resources==0.0.0
 pycparser==2.19
+PyJWT==1.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 python-editor==1.0.4
