--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cryptography==2.7
+file-read-backwards==2.0.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-JWT==0.3.2
@@ -16,6 +17,7 @@ Flask-Migrate==2.5.2
 flask-restplus==0.12.1
 Flask-SQLAlchemy==2.4.0
 flask-swagger==0.2.14
+Flask-WTF==0.14.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -37,3 +39,4 @@ six==1.12.0
 SQLAlchemy==1.3.6
 urllib3==1.25.3
 Werkzeug==0.15.5
+WTForms==2.2.1
