--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,33 @@
-alembic==1.0.11
-aniso8601==7.0.0
-asn1crypto==0.24.0
-attrs==19.1.0
+aniso8601==8.0.0
+attrs==19.3.0
 bcrypt==3.1.7
-certifi==2019.6.16
-cffi==1.12.3
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
 Click==7.0
-cryptography==2.7
+cryptography==2.8
 file-read-backwards==2.0.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
-Flask-JWT==0.3.2
 Flask-Login==0.4.1
-Flask-Migrate==2.5.2
-flask-restplus==0.12.1
-Flask-SQLAlchemy==2.4.0
-flask-swagger==0.2.14
+flask-restplus==0.13.0
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 idna==2.8
+importlib-metadata==1.1.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonify==0.5
-jsonschema==3.0.2
-Mako==1.1.0
+Jinja2==2.10.3
+jsonschema==3.2.0
 MarkupSafe==1.1.1
-mysqlclient==1.4.4
-pkg-resources==0.0.0
+more-itertools==8.0.0
+mysqlclient==1.4.6
 pycparser==2.19
-PyJWT==1.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
-python-editor==1.0.4
-pytz==2019.2
-PyYAML==5.1.2
+pyrsistent==0.15.6
+pytz==2019.3
 requests==2.22.0
-six==1.12.0
-SQLAlchemy==1.3.6
-urllib3==1.25.3
-Werkzeug==0.15.5
+six==1.13.0
+SQLAlchemy==1.3.11
+urllib3==1.25.7
+Werkzeug==0.16.0
 WTForms==2.2.1
+zipp==0.6.0
