--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 aniso8601==8.0.0
 attrs==19.3.0
 bcrypt==3.1.7
+blinker==1.4
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
 Click==7.0
 cryptography==2.8
+cycler==0.10.0
 file-read-backwards==2.0.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
@@ -18,11 +21,17 @@ importlib-metadata==1.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.2.0
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.2
+mod-wsgi==4.6.8
 more-itertools==8.0.0
 mysqlclient==1.4.6
+numpy==1.18.0
 pycparser==2.19
+pyparsing==2.4.6
 pyrsistent==0.15.6
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
