--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,14 @@ pyparsing==2.4.6
 pyrsistent==0.15.6
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.3
 requests==2.22.0
+simplejson==3.17.0
 six==1.13.0
 SQLAlchemy==1.3.11
+sqlathanor==0.5.1
 urllib3==1.25.7
+validator-collection==1.4.1
 Werkzeug==0.16.0
 WTForms==2.2.1
 zipp==0.6.0
